asyncrum-api/network/ingress/asyncrum-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: asyncrum-api-ingress
  namespace: asyncrum
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: subnet-0a32d269ffed435dd, subnet-0b8b4f2da99376f26
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: asyncrum-api-service
                port:
                  number: 8080
